--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ name: Amy Mann
 
 # Short bio or description (displayed in the header)
 # description: the profile of an engineer, researcher and software developer
+url: "https://amysmann.com"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/profile.jpeg
@@ -22,15 +23,13 @@ footer-links:
   facebook:
   flickr:
   github: am-mann
-  instagram: https://www.linkedin.com/in/amy-mann-08a590216/
-  linkedin:
+  linkedin: https://www.linkedin.com/in/amy-mann-08a590216/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
