--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,6 @@ name: Amy Mann
 
 # Short bio or description (displayed in the header)
 # description: the profile of an engineer, researcher and software developer
-url: "https://amysmann.com"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/profile.jpeg
@@ -36,12 +35,12 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: G-W1RRQW6NCQ
 # excerpt_separator: <!--more-->
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-#url: "https://amysmann.com" # the base hostname & protocol for your site
+url: "https://amysmann.com" # the base hostname & protocol for your site
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
